private routes made, OTP and forget password remaining

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,21 +10,29 @@
 <body>
     
     <nav>
-        <h4>Node MySQL</h4>
+        {{#if message}}
+            <h4>{{message}}</h4>
+        {{else}}
+            <h4>Node MySQL</h4>
+        {{/if}}
         <ul>
             <li><a href="/">HOME</a></li>
-            <li><a href="/login">LOGIN</a></li>
-            <li><a href="/register">REGISTER</a></li>
+            {{#if message}}
+                <li><a href="/auth/logout">LOGOUT</a></li>
+            {{else}}
+                <li><a href="/login">LOGIN</a></li>
+                <li><a href="/register">REGISTER</a></li>
+            {{/if}}
+            
         </ul>
     </nav>
 
     <div class="container mt-4">
         <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <h1 class="display-4">Hello!</h1>
+            <p class="lead">This is a simple login and signup page, made using NodeJS and MYSQL.</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <p>Registration uses name, contact, email, password. And while login OTP is sent to mobile for verification!</p>
         </div>
     </div>
 
