--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,10 @@
 body{
-    background: linear-gradient(to right, #b92b27, #1565c0);
+    background: linear-gradient(to left, #bfbccc, #0f2e52);
 }
 
 nav{
-    background-color:#b92b27;
-    color: black;
+    background-color:  #0c243f;
+    color:white;
     padding: 30px 60px;
     display: flex;
     justify-content: space-between;
@@ -19,7 +19,7 @@ nav li{
     list-style: none;
 }
 nav li a{
-    color: #fff;
+    color:white;
     text-decoration: none;
     font-weight: bold;
     padding: 5px 8px;
@@ -28,3 +28,110 @@ nav li a:hover{
     color:  #1565c0;
     text-decoration: none;
 }
+
+
+
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+  }
+  
+  input {
+      font-size: 25px;
+      line-height: 5em;
+      margin: 0;
+      padding: 4px;
+      -webkit-appearance: none;
+  }
+  
+  .register {
+      background-color: #e9ecef;
+      margin: 50px auto;
+      width: 500px;
+      padding: 40px;
+  }
+  
+  .register label {
+      color: hsl(0, 0%, 100%);
+      display: block;
+      height: 48px;
+      line-height: 60px;
+      position: absolute;
+      text-align: center;
+      width: 36px;
+  }
+  
+  .register input {
+      border: none;
+      height: 48px;
+      outline: none;
+  }
+  
+  .register input {
+      background-color: #fff;
+      border-top: 2px solid #2c90c6;
+      border-right: 1px solid #000;
+      border-bottom: 2px solid #2c90c6;
+      border-left: 1px solid #000;
+      border-radius: 0 0 5px 5px;
+      -moz-border-radius: 0 0 5px 5px;
+      -webkit-border-radius: 0 0 5px 5px;
+    -o-border-radius: 0 0 5px 5px;
+    -ms-border-radius: 0 0 5px 5px;
+      color: #363636;
+      margin-bottom: 20px;
+      padding-left: 36px;
+      width: 17em;
+  }
+  
+  .register input[type="submit"]:hover {
+      background-color: #2c70c6;
+    box-shadow: 2px 2px 20px  #2c90c6, #fff 0 -1px 2px;
+  }
+  
+  .register button{
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #113257;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+    margin-left: 35%;
+    margin-top: 20px;
+    
+  }
+
+  .register button:hover {background-color: #09203a}
+
+.register button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+  .text {
+    color: #0f2e52; 
+    font-size: 50px; 
+    font-weight: 1000;
+    margin: 2% auto;
+    text-align: center;
+    text-shadow: 1px 2px 1px  rgb(255,255,255,1.4);
+    padding-bottom: 20px;
+  }
+  
+  .text-1{
+    color: #b9c3ce; 
+    font-weight: bold;
+    margin: 2% auto;    
+    text-align: center;   
+    padding-bottom: 20px;
+    text-decoration: underline;
+    padding-top: 25px;
+  }
+  p:hover {
+    text-shadow: 2px 2px 20px  #064d74, #fff 0 -1px 2px;
+  }
