--- a/views/forgotPassword.hbs
+++ b/views/forgotPassword.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>Login</title>
+    <title>Forgot Password</title>
 </head>
 <body>
     
@@ -14,25 +14,24 @@
         <ul>
             <li><a href="/">HOME</a></li>
             <li><a href="/register">REGISTER</a></li>
+            <li><a href="/login">LOGIN</a></li> 
         </ul>
     </nav>
-    
-        {{#if message}}
-            <h4 class="text">{{message}}</h4>
-        {{/if}}
+
     <div class="register">
-        <p class="text">LOGIN</p>
+        <p class="text">SEND VERIFICATION MAIL</p>
     
-        <form method="post" action="/auth/login">
+        <form method="post" action="/auth/forgotPassword">
             <label class="fontawesome-user"></label>
             <input type="email" id="email" required placeholder="Email" autocomplete="off" name="email">
             <label class="fontawesome-user"></label>
-            <input type="password" name="password" id="password" required placeholder="Password" autocomplete="off"> 
-            <button type="submit">LOGIN</button>
+            <button type="submit">Send</button>
         </form>
-        <p class="text-1"><a href="/forgotPassword">Forgot Password</a></p>
     </div>
 
+        {{#if message}}
+            <h4 class="alert alert danger mt-4">{{message}}</h4>
+        {{/if}}
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
