git ignore updated

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
     
     <nav>
         {{#if message}}
-            <h4>{{message}}</h4>
+            <h4>Hello, {{message}}</h4>
         {{else}}
             <h4>Node MySQL</h4>
         {{/if}}
