--- a/views/forgotPassword.hbs
+++ b/views/forgotPassword.hbs
@@ -10,7 +10,7 @@
 <body>
     
     <nav>
-        <h4>Node MySQL</h4>
+        <h4>BoilerPlate</h4>
         <ul>
             <li><a href="/">HOME</a></li>
             <li><a href="/register">REGISTER</a></li>
