--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>Node-SQL</title>
+    <title>BoilerPlate</title>
 </head>
 <body>
     
@@ -13,7 +13,7 @@
         {{#if message}}
             <h4>Hello, {{message}}</h4>
         {{else}}
-            <h4>Node MySQL</h4>
+            <h4>BoilerPlate</h4>
         {{/if}}
         <ul>
             <li><a href="/">HOME</a></li>
