--- a/views/register.hbs
+++ b/views/register.hbs
@@ -10,7 +10,7 @@
 <body>
     
     <nav>
-        <h4>Node MySQL</h4>
+        <h4>BoilerPlate</h4>
         <ul>
             <li><a href="/">HOME</a></li>
             <li><a href="/login">LOGIN</a></li>
@@ -40,41 +40,6 @@
         </form>
     </div>
     
-    {{!-- <div class="card">
-        <div class="card-body">
-            <div class="card-header">Registration From</div>
-            <div class="card body">
-                <form action="/auth/register" method="POST">
-                    <div class="form-group">
-                        <label for="name">Name: </label>
-                        <input type="text" class="form-control" id="name" name="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email Address: </label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="contact">Contact Number: </label>
-                        <input type="text" class="form-control" id="contact" name="contact">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password: </label>
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmPassword">Confirm Password: </label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
-                    </div>
-                    
-                    <button type="submit" class="btn btn-primary">Register User</button>
-                </form>
-            </div>
-        </div>
-
-        {{#if message}}
-            <h4 class="alert alert danger mt-4">{{message}}</h4>
-        {{/if}}
-    </div> --}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
 </body>
